return-confirmation bug fixed